# megaOrchestratoraue228

LightServer/: LightServer.csproj  LightServer.sln  Program.cs  appsettings.json
LightServer/Controllers/: LightController.cs
LightServer/Models/: FlashRequest.cs  LightStatusResponse.cs  SetLightRequest.cs  SetMultipleLightsRequest.cs  TriggerInspectionRequest.cs
LightServer/Properties/: launchSettings.json
LightServer/Services/: LightService.cs
LightServer/src/: IOControlSDK.cs
camera-worker/: CMakeLists.txt
camera-worker/src/: main.c  python_embed.c  python_embed.h
config/: config.json  config.yaml
docs/: CONTRACT.md  STAGE-9.3-SLA.md  STAGE-9.4-HARNESS.md
java-geometry-service/: pom.xml
logs/: camera-worker-metrics-cam-0.jsonl  camera-worker-metrics-cam-1.jsonl  camera-worker-metrics-cam-2.jsonl  camera-worker-metrics-cam-3.jsonl  camera-worker-metrics-cam-4.jsonl
logs/geometry/: geometry-only-benchmark-20260507-191539.json  geometry-only-benchmark-20260507-192215.json  geometry-only-benchmark-20260507-193419.json  geometry-only-benchmark-20260507-194022.json  geometry-only-benchmark-20260507-194505.json  geometry-only-benchmark-20260507-194937.json  (+3 more)
orchestrator-java/: pom.xml
python-detectors/: pyproject.toml
python-detectors/src/: embedded_detector.py
python-detectors/src/iml_detectors/: __init__.py  detector_registry.py  detector_v1.py  detector_v2.py  embedded_detector.py  runner.py
python-detectors/src/iml_detectors.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python-detectors/src/iml_detectors/services/: __init__.py  inspection_service.py
scripts/: fault_injection_suite.py  load_harness.py  regression_protocol_suite.py  stage_g_gate.py
(+182 files in other folders)
